<resources>
    <string name="app_name">Football News Manager</string>
    <string name="app_logo_name">Football News\nManager</string>
    <string name="lets_begin">Begin</string>
    <string name="logging">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <!--    validation-->
    <string name="field_not_blank">Field cannot be empty</string>
    <string name="email_invalid">Invalid mail address</string>
    <string name="email_too_long">Mail address can contain maximum 40 characters</string>
    <string name="password_invalid">Password must contains between 8 and 30 characters</string>
    <string name="loading">Loading…</string>
    <string name="login_successful">Logged Successfully</string>
    <string name="player_logo">Player logo</string>
    <string name="send">Send</string>
    <string name="forget_password_desc">Enter your e-mail address to which\nwe will send the activation token</string>
    <string name="token">Token</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password </string>
    <string name="change_password">Change password </string>
    <string name="password_must_match">Passwords dont match</string>
    <string name="token_not_empty">Token cannot be empty</string>
    <string name="reset_password">Reset password</string>
    <string name="next">Next</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="login_size_error">Login musi zawierać od 4 do 20 znaków</string>
    <string name="username">Name</string>
    <string name="back">Back</string>
    <string name="language">Language</string>
    <string name="proposed_teams">Proposed Teams</string>
    <string name="polish">Polish</string>
    <string name="german">German</string>
    <string name="italish">Italish</string>
    <string name="spanish">Spain</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="menu_news_selected"><i>Selected</i></string>
    <string name="menu_profile_name"><i>Profile</i></string>
    <string name="menu_sites_name"><i>Sites</i></string>
    <string name="menu_news_all"><i>News</i></string>
    <string name="reload">refresh</string>
    <string name="no_network">No internet connection</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="ok">OK</string>
    <string name="empty_liked_news">There is no liked news!</string>
    <string name="no_news_for_team">There is no news for this team!</string>
    <string name="search_for_teams_and_news">Search for teams or news</string>
    <string name="search_result_empty">There is no result for given phrase</string>
    <string name="try_again">Try Again</string>
    <string name="liked">Liked News</string>
    <string name="empty_content">It\'s a bit empty in here</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="information">Information</string>
    <string name="title">Title:</string>
    <string name="source">Source:</string>
    <string name="added">Added:&#160;</string>
    <string name="clicks">Clicks:</string>
    <string name="likes">Likes:</string>
    <string name="teams">Teams</string>
    <string name="no_more_news">There is no more news</string>
    <string name="add_teams">Add Teams</string>
    <string name="statistics">Statistics</string>
    <string name="likes_de">Likes</string>
    <string name="management">Management</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="choose_favourite_sites">Choose favourite sites</string>
    <string name="proposed_teams_title">Choose the teams you are interested in</string>
    <string name="password_changed">Password changed</string>
    <string name="total">Total:&#160;</string>
    <string name="today">Today:&#160;</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="description">Description:&#160;</string>
    <string name="account_from">Account from:&#160;</string>
    <string name="added_de">Added</string>
    <string name="all">&#160;All</string>
    <string name="popular">Popular</string>
    <string name="teams_management">Teams Management</string>
    <string name="news">news</string>
    <string name="site_logo">Site Logo</string>
    <string name="team_logo">Team Logo</string>
    <string name="news_image">News Image</string>
    <string name="pitch_image">Pitch image</string>
    <string name="bottle_image">Bottle Image</string>
    <string name="league_logo">League Logo</string>
    <string name="search_result_image">Search Result Image</string>
    <string name="old_password">Old password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete_account">Are you sure you want to delete the account?</string>
    <string name="added_team">Added&#160;</string>
    <string name="remove_team">Removed&#160;</string>
    <string name="added_to">&#160;to favourite teams!</string>
    <string name="remove_from">&#160;from favourite teams!</string>
    <string name="added_new_news">Added new news:&#160;</string>
    <string name="empty_favourite_teams">There is no favourite team added!</string>

</resources>
