<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="pl.android.footballnewsmanager.fragments.auth.forgetPassword.ForgetPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/player_logo"
                android:scaleType="fitXY"
                android:src="@drawable/ic_player" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/forget_password"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:transitionName="forget password fragment title" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/forget_password_desc"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forget_password_input_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:textColorHint="@color/colorTextPrimary"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forget_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="17sp"
                    app:add_text_watcher="@{viewModel.emailValidationTextWatcher}"
                    app:clear_focus="@{viewModel.clearFocus}"
                    app:set_editor_action_listener="@{viewModel.emailEditorListenerObservable}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_validate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/primary_radius_20dp"
                android:onClick="@{()->viewModel.validate()}"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/buttonColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{viewModel.errorText}"
                android:textAlignment="center"
                android:textColor="@color/errorColor"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</layout>