<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.footballnewsmanager.fragments.auth.welcome.WelcomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activites.auth.AuthActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_auth_background" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_logo_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_with_back_and_radius"
            android:drawableEnd="@drawable/ic_arrow_forward_button"
            android:drawablePadding="36dp"
            android:onClick="@{()->viewModel.onRegister()}"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/lets_begin"
            android:textAllCaps="false"
            android:textColor="@color/buttonColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/auth_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:onClick="@{()->viewModel.onLogin()}"
            android:paddingStart="12dp"
            android:paddingTop="3dp"
            android:paddingEnd="12dp"
            android:paddingBottom="3dp"
            android:text="@string/logging"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:transitionName="auth fragment logging" />

        <Button
            android:id="@+id/auth_forget_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:onClick="@{()->viewModel.onForgetPassword()}"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:transitionName="auth fragment forget password" />

    </LinearLayout>
</layout>
