<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="pl.android.footballnewsmanager.fragments.auth.registerFragment.RegisterViewModel" />
    </data>

    <ScrollView
        android:id="@+id/register_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/player_logo"
                android:scaleType="fitXY"
                android:src="@drawable/ic_player" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="30sp"
                android:textStyle="bold|italic"
             />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_login_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:textColorHint="@color/colorTextPrimary"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_login_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:text="@={viewModel.username}"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="17sp"
                    app:add_text_watcher="@{viewModel.usernameTextWatcherAdapter}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:textColorHint="@color/colorTextPrimary"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="17sp"
                    app:add_text_watcher="@{viewModel.emailTextWatcherAdapter}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:textColorHint="@color/colorTextPrimary"
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorTextPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:text="@={viewModel.password}"
                    android:nextFocusForward="@id/login_validate_button"
                    android:padding="6dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="17sp"
                    app:clear_focus="@{viewModel.clearFocus}"
                    app:add_text_watcher="@{viewModel.passwordTextWatcherAdapter}"
                    app:set_editor_action_listener="@{viewModel.passwordEditorListenerAdapter}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_validate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/primary_radius_20dp"
                android:onClick="@{()->viewModel.validate()}"
                android:paddingStart="48dp"
                android:paddingEnd="48dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/buttonColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{viewModel.errorText}"
                android:textAlignment="center"
                android:textColor="@color/errorColor"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</layout>
